--- a/index.html
+++ b/index.html
@@ -8,37 +8,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloudboost</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <div class="container">
-        <a href="#" class="btn-primary">Testar gratis</a>
-        <button class="btn-primary">Testar gratis</button>
-        <!---->
-        <form action="" class="form-email">
-            <input type="email" placeholder="Digite seu e-mail">
-            <button type="submit" class="btn-primary">Testar gratis</button>
-        </form>
-        <!---->
-        <div class="card-recurso">
-            <div class="icon">
-                <img src="img/icon-alcance-mais.svg" alt="Icone alcance mais">
-            </div>
-            <!---->
-            <div class="text">
-                <h6>Alcance mais</h6>
-                <p>Aumente o tráfego do seu site e suas vendas utilizando o e-mail marketing.</p>
-            </div>
-        </div>
-        <!---->
-        <div class="review">
-            <img src="img/users.png" alt="">
-            <!---->
-            <div>
-                <img src="img/icon-star.svg" alt="">
-                <span>(99K <strong>Reviwes</strong>)</span>
+    <header data-aos="fade-up">
+        <div class="container">
+            <div class="content-header">
+                <a href="#" class="logo">
+                    <img src="img/logo.svg" alt="">
+                </a>
+                <!---->
+                <div class="left-content">
+                    <a href="#">
+                        <img src="img/icon-help.svg" alt="Icon help">
+                        <span>Precisa de ajuda?</span>
+                    </a>
+                    <!---->
+                    <button class="btn-primary">Testar gratis</button>
+                </div>
+                <!---->
+                <button class="btn-mobile">
+                    <img src="img/icon-hamburger.svg" alt="">
+                </button>
             </div>
         </div>
-    </div>
+    </header>
+    <!---->
+    <section class="s-hero">
+        <div class="container">
+            <div class="hero-content">
+                <div class="left" data-aos="fade-right">
+                    <h1>Ferramenta de e-mail marketing perfeita para <span>sua empresa!</span></h1>
+                    <!---->
+                    <p>Aproveite o potencial do e-mail marketing para ganhar vendas e fortalecer seu relacionamento com clientes.</p>
+                     <!---->
+                    <form action="" class="form-email">
+                        <input type="email" placeholder="Digite seu e-mail">
+                        <button type="submit" class="btn-primary">Testar gratis</button>
+                    </form>
+                    <!---->
+                    <ul>
+                        <li><img src="img/google.svg" alt="Google"></li>
+                        <!---->
+                        <li><img src="img/facebook.svg" alt="Facebook"></li>
+                        <!---->
+                        <li><img src="img/instagram.svg" alt="Instagram"></li>
+                    </ul>
+                    <!---->
+                    <div class="review">
+                        <img src="img/users.png" alt="">
+                        <!---->
+                        <div>
+                            <img src="img/icon-star.svg" alt="">
+                            <span>(99K <strong>Reviwes</strong>)</span>
+                        </div>
+                    </div>
+                </div>
+                <!---->
+                <img src="img/main-image.png" alt="" data-aos="fade-right">
+                <img src="img/main-image-mobile.png" class="img-mobile" alt="" data-aos="fade-up">
+            </div>
+        </div>
+    </section>
+    <!---->
+    <section class="s-recursos">
+        <div class="container">
+            <div class="top" data-aos="fade-right">
+                <h3>Conheça os recursos da ferramenta de e-mail marketing CloudBoost</h3>
+                <!---->
+                <p>Mais de 5.000 empresas que utilizam ✌️</p>
+            </div>
+            <!---->
+            <div class="all" data-aos="fade-up">
+                <div class="card-recurso">
+                    <div class="icon">
+                        <img src="img/icon-alcance-mais.svg" alt="Icone alcance mais">
+                    </div>
+                    <!---->
+                    <div class="text">
+                        <h6>Alcance mais</h6>
+                        <p>Aumente o tráfego do seu site e suas vendas utilizando o e-mail marketing.</p>
+                    </div>
+                </div>
+                <!---->
+                <div class="card-recurso">
+                    <div class="icon">
+                        <img src="img/icon-gaste-menos.svg" alt="Icone gaste menos">
+                    </div>
+                    <!---->
+                    <div class="text">
+                        <h6>Gaste menos</h6>
+                        <p>Com a ferramenta você faz envios em massa, gastando menos de R$ 0,01 por mensagem!.</p>
+                    </div>
+                </div>
+                <!---->
+                <div class="card-recurso">
+                    <div class="icon">
+                        <img src="img/icon-autonomia.svg" alt="Icone autonomia e resultado">
+                    </div>
+                    <!---->
+                    <div class="text">
+                        <h6>Autonomia e resultado</h6>
+                        <p>Crie listas de contatos, campanhas e ainda analise o resultado de cada envio. .</p>
+                    </div>
+                </div>
+                <!---->
+                <div class="card-recurso">
+                    <div class="icon">
+                        <img src="img/icon-template.svg" alt="Icone templates Boost">
+                    </div>
+                    <!---->
+                    <div class="text">
+                        <h6>Templates Boost</h6>
+                        <p>Modelos prontos para cada tipo de e-mail: newsletter, lançamento, campanha de vendas e outros.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---->
+    <section class="s-marketing">
+        <div class="container">
+            <div class="box" data-aos="zoom-in">
+                <h2>Alavanque com a Ferramenta de E-mail Marketing Perfeita!</h2>
+                <!---->
+                <p>Aumente as conversões, nutra relacionamentos e alcance o sucesso. Experimente agora mesmo!</p>
+                <!---->
+                <button class="btn-primary">Testar gratis</button>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init({
+            duration: 1000
+        });
+      </script>
 </body>
 </html>
